# pycard

./: README.md  pyproject.toml  requirements.txt
pycard/: __init__.py  card.py  deck.py
src/pycard/: __init__.py  card.py  deck.py
tests/: test_deck.py
