[project]
name = "pycard"
version = "0.0.1"
description = "Python package for a standard 52 card deck"
author = "Jonathan Lopez (OtherwiseJLo)"
license = "MIT"
readme = "README.md"
python = "^3.7"
homepage = "https://github.com/OtherwiseJLo/pycard"
repository = "https://github.com/OtherwiseJLo/pycard"
documentation = "https://github.com/OtherwiseJLo/pycard"

keywords = ["games", "probability", "simulation", "cards", "deck"]

[dependencies]

[dev-dependencies]
black = {version = "^18.3-alpha.0", python = "^3.7"}
pytest = {version = "^18.3-alpha.0", python = "^3.7"}

[build-system]
requires = [
  "setuptools >= 35.0.2",
  "setuptools_scm >= 2.0.0, <3",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py37']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
