[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pycard"
authors = [{ name = "Jonathan Lopez", email = "jonathanglopez@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["probability", "simulation", "cards", "deck"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/otherJL0/pycard"
Source = "https://github.com/otherJL0/pycard"
Documentation = "https://github.com/otherJL0/pycard"


[project.optional-dependencies]
test = ["pytest", "pytest-cov", "coverage", "tox", "nox"]
doc = ["sphinx"]
build = ["flit", "pip-tools", "pre-commit"]
lint = ["isort", "flake8", "black", "mypy", "pylint"]

[tool.black]
line-length = 88
target_version = ['py310']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests", "integration"]
